# fstrain

./: INSTALL  Makefile  Makefile.in  README  README.html  README.md  VERSION  aclocal.m4  bakefile-config.bkl  configure  configure.ac
cmake/: FindOpenFst.cmake
doc/: doxygen.cfg
fstrain/: CMakeLists.txt
fstrain/core/: CMakeLists.txt  debug.h  expectation-arc-inline.cc  expectation-arc.cc  expectation-arc.h  expectation-weight.h  expectations.h  mutable-weight.h  neg-log-of-signed-num.h  util.cc  util.h
fstrain/core/test/: test-construct.cc  test-neglog-of-signed-num.cc
fstrain/create/: CMakeLists.txt  add-backoff.h  add-fst-to-trie.h  add-unobserved-unigrams.h  all-symbols.h  backoff-symbols.h  backoff-util.h  construct-lattice-fct.h  count-ngrams-in-data.h  create-alignment-symbols.h  create-backoff-model.h  create-ngram-fst-from-best-align-r2191.cc  create-ngram-fst-from-best-align-r2191.h  create-ngram-fst-from-best-align.cc  create-ngram-fst-from-best-align.h  create-ngram-fst.h  create-ngram-trie.h  create-scoring-fst-from-trie.h  debug.h  feature-functions.h  get-alignment-symbols-fct.h  get-features.cc  get-features.h  get-first-and-last.cc  get-first-and-last.h  get-well-formed.cc  get-well-formed.h  ngram-counter.h  ngram-fsa-insert-features.cc  ngram-fsa-insert-features.h  prune-fct.h  r-interface.h  trie-insert-features.h  v3-alignment-lattices-iterator.h  v3-create-trie.h  v3-get-first-and-last.cc  wfutil.cc  wfutil.h
fstrain/create/features/: add-collapsed.cc  extract-features.h  feature-set.h  la+len.cc  la.cc  la1.cc  latent-annotation-features.h  latent-annotations-util.h  simple+len+insdel.cc  simple+len.cc  simple+lm.cc  simple+tlm.cc  simple.cc
fstrain/create/noepshist/: backoff-iterator.h  history-filter.h  noepshist-create-scoring-fst.h
fstrain/create/test/: test-approx-dist.cc  test-backoff.cc  test-create-1.cc  test-create-2.cc  test-create-3.cc  test-create-from-align2.cc  test-create-ngram-fst-from-best-align.cc  test-create-scoring-fsa-from-data.cc  test-custom-phi-matcher.cc  test-la.cc  test-matrix-mult.cc
fstrain/create/v2/: concat-start-and-end-labels.h  create-ngram-trie-from-data.h  create-scoring-fsa-from-data.h  get-project-up-down.h  get-pruned-alignment-syms.h  get-sigma-fsa.h
fstrain/drivers/: CMakeLists.txt  debug.h  transducer-data-loglik.cc  transducer-decode.cc  transducer-train.cc
fstrain/glue/: CMakeLists.txt  create+train-r-interface.cc  create+train-r-interface2.cc  debug.h
fstrain/train/: CMakeLists.txt  README  debug.h  length-feat-mapper.h  lenmatch.cc  lenmatch.h  obj-func-fst-conditional-lenmatch-r-interface.cc  obj-func-fst-conditional-lenmatch.cc  obj-func-fst-conditional-lenmatch.h  obj-func-fst-conditional.cc  obj-func-fst-conditional.h  obj-func-fst-condother-lenmatch-r-interface.cc  obj-func-fst-condother-lenmatch.cc  obj-func-fst-condother-lenmatch.h  obj-func-fst-factory.cc  obj-func-fst-factory.h  obj-func-fst-joint.cc  obj-func-fst-joint.h  obj-func-fst-r-interface.cc  obj-func-fst-util.h  obj-func-fst.cc  obj-func-fst.h  obj-func-r-interface.h  obj-func.h  set-feature-weights.cc  set-feature-weights.h  shortest-distance-timeout.h  timeout.h
fstrain/train/online/: fst-stuff.h  train.h
fstrain/train/test/: test-insert-feature-weights.cc  test-lenmatch.cc
fstrain/util/: CMakeLists.txt  add-maps.h  align-strings.h  approx-determinize.cc  approx-determinize.h  check-convergence.h  compose-fcts-experimental.h  compose-fcts.h  data.cc  data.h  debug.h  determinize-in-place.h  determinized-union.h  double-precision-weight.h  get-highest-feature-index.cc  get-vector-fst.h  intersect-vec.h  kbest.h  load-library.cc  load-library.h  memory-info.cc  memory-info.h  misc.cc  misc.h  multiplied-map.h  normalize.h  options.cc  options.h  print-fst.h  print-path.cc  print-path.h  remove-weights-keep-features-mapper.h  selective-phi-matcher.h  shortest-distance-m.h  string-to-fst.h  string-weight-mapper.h  symbol-table-mapper.h  symbols-mapper-in-out-align.h  timer.cc  timer.h  (+1 more)
scripts/: build-coe.sh  extract-high-freq.pl  extract-voc.pl  parse-command-args.R  rprop2.R  tab2fstrain.pl  train+test.pl  train-condother.R  train.R  unk-replace.pl
src/fstrain/core/: debug.h  expectation-arc.cc  expectation-arc.h  expectation-weight.h  expectations.cc  expectations.h  neg-log-of-signed-num.h  util.cc  util.h
src/fstrain/create/: README  add-backoff.h  add-fst-to-trie.h  all-symbols.h  backoff-symbols.h  construct-lattice-fct.h  create-backoff-model.h  create-ngram-fst-from-best-align-r2191.h  create-ngram-fst-from-best-align.cc  create-ngram-fst.cc  create-ngram-trie.h  create-scoring-fst-from-trie.cc  create-scoring-fst-from-trie.h  debug.h  feature-functions.h  get-alignment-symbols-fct.h  get-features.cc  get-first-and-last.h  ngram-counter.h  ngram-fsa-insert-features.h  v3-get-first-and-last.h  wfutil.cc
src/fstrain/drivers/: transducer-decode.cc
src/fstrain/glue/: create+train-r-interface3.cc  debug.h
src/fstrain/train/: length-feat-mapper.h  lenmatch.cc  obj-func-fst-conditional-lenmatch-r-interface.cc  obj-func-fst-conditional-lenmatch.cc  obj-func-fst-conditional-lenmatch.h  obj-func-fst-condother-lenmatch-r-interface.cc  obj-func-fst-condother-lenmatch.cc  obj-func-fst-condother-lenmatch.h  obj-func-fst-factory.h  obj-func-fst-joint.h  obj-func-fst-r-interface.cc  obj-func-fst-util.h  obj-func-fst.h  set-feature-weights.h
src/fstrain/util/: approx-determinize.cc  compose-fcts.h  data.h  misc.cc  (+15 more)
test/: Makefile  Makefile.include
test/core/: Makefile  construct.stdout  expectation-arc-fire1+1+1+1+1.fst.txt  expectation-arc-fire2+2+1.fst.txt  expectation-arc-fire2+3.fst.txt  expectation-arc-fire5.fst.txt  expectation-arc.fst.txt  fst-bin.stdout
test/create/: Makefile
test/create+train+decode/: 1.test  1.train  1b.train  Makefile  ascii.syms  ascii2.syms  foo-align.feat-names  foo-align.feat-weights  foo.test.stderr  foo.test.stderr-expected  foo.test.stdout  foo.train-align.stderr  foo.train-align.stdout  foo.train.stderr  foo.train.stdout
test/train/: Makefile
test/util/: Makefile
(+71 files in other folders)
